--- a/app/styles/ap-basico.styl
+++ b/app/styles/ap-basico.styl
@@ -57,6 +57,10 @@ body
 	background-color #0d0b0d !important
 	margin 0
 	
+.bg-terceario
+	background-color lighten(negro,90%) !important
+	margin 0
+	
 .bg-rojo
 	background-color alpha(rojo,80%)
 	
@@ -113,7 +117,7 @@ a[href^="https://maps.google.com/maps"]
 	tra(1s)
 	
 .textoIntrusivo 
-	max-width 500px
+	width 60%
 	margin 0 auto
 	padding-top 200px
 	
@@ -126,9 +130,9 @@ a[href^="https://maps.google.com/maps"]
 	& span 
 		color principal
 	
-	& a 
-		width 100%
-		margin-top 50px
+	& .btn-intrusivo
+		margin 50px auto 0
+		width 180px
 	
 #btnIntrusivo
 	transition  .4s opacity ease-out, .4s left ease-out
