--- a/app/styles/ap-clientes.styl
+++ b/app/styles/ap-clientes.styl
@@ -1,5 +1,16 @@
 /* CLIENTES */
 
+.formu-show-hide 
+  padding 10px
+  height 280px
+
+.formu-show-hide 
+  -webkit-transition all linear 0.5s
+  transition all linear 0.5s
+
+.formu-show-hide.ng-hide 
+  opacity 0
+  height 0
 
 				
 /* CLIENTES FINAL */
