--- a/app/styles/ap-media-600.styl
+++ b/app/styles/ap-media-600.styl
@@ -1,14 +1,23 @@
 @media screen and (max-width 600px)
+
+	.contenedorPropa
+		max-width 500px
+		font-size 30px
+		left 10%
+		top 70px
+		
+		& span 
+			font-size 45px
+			
+		& a 
+			margin-top 15px
 	
-	#logo
-		left 0px
+	#logo 
+		top 10px
+		left 10px
 		
-		& img 
-			width 55px
-		
-		& .bno 
-			font-size 40px
-			margin-left 5px
+		& img
+			width 230px
 
 	.propaContenedor
 		top 90px
@@ -24,4 +33,7 @@
 			
 		& a 
 			margin-top 30px
+			
+	.textoIntrusivo 
+		padding-top 100px
 			
