--- a/app/styles/style.styl
+++ b/app/styles/style.styl
@@ -16,6 +16,10 @@
 
 @import 'ap-servicios.styl'
 
+@import 'ap-clientes.styl'
+
+@import 'ap-privado.styl'
+
 @import 'ap-media-800.styl'
 
 @import 'ap-media-600.styl'
@@ -24,7 +28,6 @@
 
 /*
 
-@import 'ap-clientes.styl'
 
 @import 'ap-pie.styl'
 
