--- a/app/views/servicios.html
+++ b/app/views/servicios.html
@@ -1,12 +1,14 @@
+<div class="row bg-blanco">
+
 <div class="row" style="overflow-x:hidden;position: relative;margin: 0;padding: 0">
   <img ng-src="{{imagenServicios}}" alt="" width="100%">
 </div>
 
 <div class="row push-titulo bg-blanco">
-	<div class="col s12 m7">
+	<div class="col s12 m7 wow fadeInRight" data-wow-duration="1s" data-wow-delay="1s">
         <img src="images/pushNotification.png" alt="">
     </div>
-    <div class="csl s12 m5">
+    <div class="csl s12 m5 wow fadeInDown" data-wow-duration="1s" data-wow-delay="1.5s">
     	<div class="section">
 		    <h5>Push Notification</h5>
 		    <p>La forma mas fácil y directa para llegar a tus usuarios.</p>
@@ -44,4 +46,41 @@
 		    </li>
 		</ul>
 	</div>
+</div>
+
+<div class="row push-titulo bg-terceario">
+	<div class="col s12 m7 wow fadeInRight" data-wow-duration="1s" data-wow-delay="1s">
+        <img src="images/mailingMarketing.png" alt="">
+    </div>
+    <div class="csl s12 m5 wow fadeInDown" data-wow-duration="1s" data-wow-delay="1s">
+    	<div class="section">
+		    <h5>Mailing Marketing</h5>
+		    <p>Informa mas rápido todas tus noticias y promociones.</p>
+		</div>
+    </div>
+    <div style="clear: both;"></div>
+	<div class="container">
+		<ul class="collapsible popout" data-collapsible="accordion">
+		    <li>
+		        <div class="collapsible-header active bg-terceario"><i class="ion-paper-airplane"></i>Mailing Personalizados</div>
+		        <div class="collapsible-body">
+		        	<p>Lorem ipsum dolor sit amet.</p>
+		        	<div class="btn-push">
+		        		<a class="waves-effect waves-light btn bg-principal">Consultar costos</a>
+		        	</div>
+		        </div>
+		    </li>
+		    <li>
+		        <div class="collapsible-header bg-terceario"><i class="ion-email"></i>Mailing Promosionales</div>
+		        <div class="collapsible-body">
+		        	<p>Lorem ipsum dolor sit amet.</p>
+		        	<div class="btn-push">
+		        		<a class="waves-effect waves-light btn bg-principal">Consultar costos</a>
+		        	</div>
+		        </div>
+		    </li>
+		</ul>
+	</div>
+</div>
+
 </div>
