--- a/app/styles/ap-media-800.styl
+++ b/app/styles/ap-media-800.styl
@@ -1,4 +1,19 @@
 @media screen and (max-width 800px)
+
+	.textoIntrusivo 
+		width 80%
+
+	.contenedorPropa
+		max-width 500px
+		font-size 40px
+		left 10%
+		top 150px
+		
+		& span 
+			font-size 60px
+			
+		& a 
+			margin-top 20px
 	
 	.navegador .tactil
 		top 10px
@@ -7,10 +22,6 @@
 	#btnIngresar
 		top 10px
 		right 10px
-		
-	#logo
-		top 5px
-		left 10px
 		
 	.propaContenedor
 		top 220px
