--- a/app/styles/ap-fuentes.styl
+++ b/app/styles/ap-fuentes.styl
@@ -86,3 +86,26 @@
 //     font-weight: normal;
 //     font-style: normal;
 // }
+@font-face 
+    font-family  'dolce_vita_lightsuper_light'
+    src  url('../fonts/dolce_vita_light-webfont.eot')
+    src  url('../fonts/dolce_vita_light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/dolce_vita_light-webfont.woff2') format('woff2'),
+         url('../fonts/dolce_vita_light-webfont.woff') format('woff'),
+         url('../fonts/dolce_vita_light-webfont.ttf') format('truetype'),
+         url('../fonts/dolce_vita_light-webfont.svg#dolce_vita_lightsuper_light') format('svg')
+    font-weight  normal
+    font-style  normal
+
+
+@font-face 
+    font-family  'dolce_vitaquite_regular'
+    src  url('../fonts/dolce_vita-webfont.eot')
+    src  url('../fonts/dolce_vita-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/dolce_vita-webfont.woff2') format('woff2'),
+         url('../fonts/dolce_vita-webfont.woff') format('woff'),
+         url('../fonts/dolce_vita-webfont.ttf') format('truetype'),
+         url('../fonts/dolce_vita-webfont.svg#dolce_vitaquite_regular') format('svg')
+    font-weight  normal
+    font-style  normal
+
