--- a/app/views/inicio.html
+++ b/app/views/inicio.html
@@ -72,7 +72,7 @@
 <div class="row st1 bg-segundario">
 	<div class="container">
 		<div class="col s12 m4 wow fadeInLeft" data-wow-duration="1s">
-			<img src="./images/phone01.png" width="cover">
+			<img src="./images/phone01.png">
 			<div class="texto">
 				<div class="circulos">1.</div>
 			    <h2>Dónde vamos?</h2>
