--- a/app/views/privado.html
+++ b/app/views/privado.html
@@ -263,7 +263,7 @@
 		<div class="col s12 m12 l4">
 			<div class="section">
 			    <h5>Visualizar</h5>
-			    <p>El contenido de como se vería en lista y individual</p>
+			    <p>El contenido de como se vería en lista e individual</p>
 			    <div class="row">
 				    <div class="col s12">
 				      <ul class="tabs">
@@ -487,7 +487,7 @@
 <div id="modalLugares" class="modal">
     <div class="modal-content">
         <h4>Seleccione un lugar</h4>
-        <p>Usted podrá ingresar todos los lugares que desee, .</p>
+        <p>Cada lugar puede tardar en estar online hasta 24 horas.</p>
         <div>
         	
 			<p>
